--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@react-oauth/google": "^0.12.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -34,7 +35,6 @@
     "react-dom": "^19.1.0",
     "rimraf": "^6.0.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
     "zod": "^4.0.5"
   },
   "devDependencies": {
@@ -50,6 +50,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "tailwindcss": "^4.1.11",
     "ts-node-dev": "^2.0.0",
     "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
