--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "veoveo",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.3.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -50,6 +50,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^4.1.11",
     "ts-node-dev": "^2.0.0",
     "tw-animate-css": "^1.3.5",
