--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "",
   "license": "ISC",
   "author": "",
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
+    "socket.io": "^4.8.1",
     "zod": "^4.0.7"
   },
   "devDependencies": {
