--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.4",
+    "node-localstorage": "^3.0.5",
     "socket.io": "^4.8.1",
     "zod": "^4.0.7"
   },
@@ -31,6 +32,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
-    "@types/node": "^24.1.0"
+    "@types/node": "^24.1.0",
+    "@types/node-localstorage": "^1.3.3"
   }
 }
