--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "lucide-react": "^0.544.0",
     "mongoose": "^8.18.1",
     "react": "^19.1.1",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
+    "react-tooltip": "^5.29.1",
+    "recharts": "^3.2.1",
     "rimraf": "^6.0.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
@@ -51,6 +54,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
+    "@types/react-calendar-heatmap": "^1.9.0",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
     "eslint": "^9.36.0",
