--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@socket.io/component-emitter": "^3.1.2",
     "@tailwindcss/typography": "^0.5.18",
     "@tailwindcss/vite": "^4.1.13",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
