--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/iamjuaness/VeoVeo#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.22",
+    "fix-esm-import-path": "^1.10.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0"
