--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "homepage": "https://github.com/iamjuaness/VeoVeo#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.22",
+    "baseline-browser-mapping": "^2.8.30",
     "fix-esm-import-path": "^1.10.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "lucide-react": "^0.544.0",
