--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,6 +35,8 @@
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.1.0",
     "@types/node-localstorage": "^1.3.3",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "tsx": "^4.7.0",
     "typescript": "~5.9.2"
   }
