--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -34,6 +34,7 @@
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.3",
+    "react-tooltip": "^5.30.0",
     "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.0"
@@ -41,9 +42,9 @@
   "devDependencies": {
     "@eslint/js": "^10.0.0",
     "@types/node": "^24.1.0",
-    "@types/react": "^19.1.3",
+    "@types/react": "^18.3.27",
     "@types/react-calendar-heatmap": "^1.6.6",
-    "@types/react-dom": "^19.1.3",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.20.0",
     "eslint-plugin-react-hooks": "^5.1.0",
