feat(stats): visual overhaul, new achievements, and pdf optimization
- Redesigned stats dashboard with modern charts (AreaChart, BarChart) and consistent styling.
- Added 9 new achievements (Planificador, Coleccionista, Rey del Drama, etc.) with a new medal grid layout.
- Optimized PDF report generation (reduced size, fixed dark mode colors).
- Fixed duration data calculations (seconds vs minutes).
- Enhanced "Detailed Stats" cards layout and visuals.
- Updated CHANGELOG.md with version 2.2.0.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@types/html2canvas": "^1.0.0",
+    "@types/jspdf": "^2.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.544.0",
     "react-router-dom": "^7.9.1",
     "recharts": "^2.15.4"
