--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@veoveo/server",
-  "version": "2.1.1",
-  "description": "VeoVeo Backend API Server",
+  "version": "2.7.2",
+  "description": "CineMate Backend API Server",
   "license": "ISC",
   "author": "",
   "type": "module",
