--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "veoveo",
   "private": true,
-  "version": "2.7.2",
+  "version": "2.7.3",
   "type": "module",
   "scripts": {
     "dev": "pnpm --parallel --filter @veoveo/web --filter @veoveo/server dev",
@@ -31,6 +31,7 @@
     "baseline-browser-mapping": "^2.8.30",
     "fix-esm-import-path": "^1.10.3",
     "postcss": "^8.5.6",
+    "shadcn": "^3.6.3",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
