chore(release): version 2.8.0 - navigation fixes and tsconfig updates
This release includes the following changes:

-PWA service worker registrario logic to handle dynamic manifest changes.
- Implemented end-to-end encryptation for messages using AES-256.
- Fixed TypeScript configuration by updating 'ignoreDeprecations' to '6.0' to silence the 'baseUrl' deprecation warning.
- Refined navigation logic in Hamburger and BottomNav components to strictly control visibility based on user authentication.
- Updated dependencies in pnpm-lock.yaml.
- General improvements in Auth and Social feature modules.

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@veoveo/web",
-  "version": "2.7.2",
+  "version": "2.8.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -59,6 +59,7 @@
     "tailwindcss": "^4.1.17",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.23.0",
-    "vite": "^7.1.6"
+    "vite": "^7.1.6",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
