--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -10,6 +10,7 @@
   ],
   "compilerOptions": {
     "baseUrl": ".",
+    "ignoreDeprecations": "6.0",
     "paths": {
       "@/shared/utils/*": ["./packages/shared/utils/*"],
       "@/shared/components/*": ["./packages/shared/components/ui/*"]
